python3/scripts/arranger_cdk8s/dist/httpbin.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: httpbin
  template:
    metadata:
      labels:
        deployment: httpbin
        resource_name: httpbin
        service: httpbin
    spec:
      containers:
        - env:
            - name: POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
          image: httpbin
          imagePullPolicy: Always
          name: httpbin
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 600Mi
            requests:
              cpu: 20m
              memory: 50Mi
      initContainers: []
      serviceAccountName: httpbin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
    service: httpbin
  name: httpbin
spec:
  ports:
    - name: http-httpbin
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
    - d1
  hosts:
    - api.d1
  http:
    - match:
        - uri:
            prefix: /httpbin/
      rewrite:
        uri: /
      route:
        - destination:
            host: httpbin.d1.svc.cluster.local
            port:
              number: 8080
          headers:
            request:
              add:
                X-Forwarded-Prefix: /httpbin
